--- a/webshop/app/Resources/views/base.html.twig
+++ b/webshop/app/Resources/views/base.html.twig
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        <p>Hi</p>
+        <p>This is the header</p>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
